--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Jaja wielkanocne</title>
+	<title>Wesołych świąt</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -33,6 +33,6 @@
 
 	</div>
 	
-	<footer>made by f***ing awesome Front-end Dev SzB :) </footer>
+	<footer>created by f***ing awesome Front-end Dev SzB :) </footer>
 </body>
 </html>
