removed unnecessary classes

--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 	<div class="eggs">
 
 		<div class="egg" id="egg1">
-			<div class="stripe"></div>
-			<div class="stripe"></div>
-			<div class="stripe"></div>
-			<div class="stripe"></div>
-			<div class="stripe"></div>
-			<div class="stripe"></div>
-			<div class="stripe"></div>
-			<div class="stripe"></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
 		</div>
-		
+
 		<div class="egg" id="egg2"></div>
 
 		<div class="egg" id="egg3">
-			<div class="col"></div>
-			<div class="col"></div>
-			<div class="col"></div>
-			<div class="col"></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
 		</div>
 
 	</div>
-	
-	<footer>created by f***ing awesome Front-end Dev SzB :) </footer>
+
+	<footer>created by SzB :) </footer>
 </body>
 </html>
